@@ -7,7 +7,6 @@ import com.unsis.scunsis_backend.model.sender.Sender;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class SenderMapper implements BaseMapper<SenderResponse, SenderRequest, Sender> {
@@ -31,7 +30,7 @@ public class SenderMapper implements BaseMapper<SenderResponse, SenderRequest, S
 
     @Override
     public List<SenderResponse> toDtos(List<Sender> entities) {
-        return entities.stream().map(this::toDto).collect(Collectors.toList());
+        return entities.stream().map(this::toDto).toList();
     }
 
     @Override
